--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:724928109914:ios:14570b773437fae25b2763",
-  "FIREBASE_PROJECT_ID": "flutter-freebies",
-  "GCM_SENDER_ID": "724928109914"
+  "GOOGLE_APP_ID": "1:70001102720:ios:b6bfd7b3585429b14d7b65",
+  "FIREBASE_PROJECT_ID": "lottery-app-16986",
+  "GCM_SENDER_ID": "70001102720"
 }
