--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,3 +1,1 @@
-# ignoring the venv folder when pushing to github
-# one will install dependencies using pip install -r requirements.txt
-venv
+node_modules/
