--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   firebase_core: ^2.13.1
   firebase_auth: ^4.1.1
   cloud_firestore: ^4.0.4
+  cloud_functions: ^4.3.2
   firebase_storage: ^11.0.4
 
   shared_preferences: ^2.0.15
