--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "faker": "^5.5.3",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
