--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   url_launcher: ^6.1.6
   file_picker: ^5.2.2
   intl: ^0.18.1
+  month_picker_dialog: 2.0.2
 
   flutter:
     sdk: flutter
