--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.5
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.10.0
@@ -48,3 +49,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - .env
