--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -14,6 +14,9 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     runs-on: ubuntu-latest
+    env:
+      FLUTTER_VERSION: '2.18.4'
+      DART_VERSION: '2.18.4'
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
@@ -22,13 +25,9 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: 'dev'
+          flutter-version: ${{ env.FLUTTER_VERSION }}
       - name: 'Build Web App'
         run: flutter build web -t lib/main.dart
-#       - name: deploy
-#         uses: peaceiris/actions-gh-pages@v3
-#         with:
-#           github_token: ${{ secrets.TOKEN }}
-#           publish_dir: ./build/web
       - name: Deploy to Firebase Hosting
         uses: w9jds/firebase-action@master
         with:
