--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -1,33 +1,29 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Build, Release app to Firebase Hosting
-# name: Test, Build and Release apk
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+name: Build and Release app to Firebase Hosting
 on:
   push:
     branches:
       - main
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
     runs-on: ubuntu-latest
-    env:
-      FLUTTER_VERSION: '3.13.1'
-      DART_VERSION: '3.1.0'
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Set up Java
+        uses: actions/setup-java@v2
         with:
           java-version: '12.x'
-      - uses: subosito/flutter-action@v1
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
-          channel: 'dev'
-          flutter-version: ${{ env.FLUTTER_VERSION }}
-      - name: 'Build Web App'
+          flutter-version: 'latest'
+
+      - name: Build Web App
         run: flutter build web -t lib/main.dart
+
       - name: Deploy to Firebase Hosting
         uses: w9jds/firebase-action@master
         with:
