--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -20,9 +20,9 @@ jobs:
         run: flutter build web -t lib/main.dart
 
       - name: Deploy to Firebase Hosting
-        - uses: FirebaseExtended/action-hosting-deploy@v0
-          with:
-            args: deploy --only hosting
-            repoToken: '${{ secrets.GITHUB_TOKEN }}'
-            firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_LOTTERY_APP_16986 }}'
-            projectId: lottery-app-16986
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          args: deploy --only hosting
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_LOTTERY_APP_16986 }}'
+          projectId: lottery-app-16986
