--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -1,4 +1,5 @@
 name: Build and Release app to Firebase Hosting
+
 on:
   push:
     branches:
@@ -7,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -19,11 +21,15 @@ jobs:
       - name: Build Web App
         run: flutter build web -t lib/main.dart
 
-      - name: Deploy to Firebase Hosting
-        uses: w9jds/firebase-action@master
+      - name: Set up Google Cloud credentials
+        uses: google-github-actions/setup-gcloud@v0.2.0
         with:
-          args: deploy --only hosting
-        env:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_LOTTERY_APP_16986 }}'
-          projectId: lottery-app-16986
+          service_account_key: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_LOTTERY_APP_16986 }}
+          project_id: lottery-app-16986  # Replace with your project ID
+
+      - name: Deploy to Firebase Hosting
+        run: |
+          gcloud auth activate-service-account --key-file=${{ secrets.FIREBASE_SERVICE_ACCOUNT_LOTTERY_APP_16986 }}
+          firebase use --lottery-app-16986
+          firebase deploy --only hosting
+
