--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -11,10 +11,10 @@ jobs:
     name: Build Flutter (Web)
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: subosito/flutter-action@v1
+    - uses: actions/checkout@v3
+    - uses: subosito/flutter-action@v2
       with:
-          channel: 'dev'
+          channel: 'stable'
     - run: flutter pub get
     - run: flutter config --enable-web
     - run: flutter build web
