--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -24,4 +24,4 @@ jobs:
         args: deploy --only hosting --public build/web
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        # PROJECT_ID: lottery-app-16986
+        PROJECT_ID: default
