--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -19,9 +19,10 @@ jobs:
     - run: flutter config --enable-web
     - run: flutter build web
     - name: Deploy to Firebase
-      uses: w9jds/firebase-action@master
-      with:
-        args: deploy --only hosting --public build/web
       env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         PROJECT_ID: lottery-app-16986
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_LOTTERY_APP_16986 }}
+      run: |
+        echo "$GOOGLE_APPLICATION_CREDENTIALS" > service-account-key.json
+        npm install -g firebase-tools@latest
+        firebase deploy --only hosting --public build/web
