--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -11,18 +11,12 @@ jobs:
     name: Build Flutter (Web)
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: subosito/flutter-action@v2
-      with:
-          channel: 'stable'
-    - run: flutter pub get
-    - run: flutter config --enable-web
-    - run: flutter build web
-    - name: Deploy to Firebase
-      env:
-        PROJECT_ID: lottery-app-16986
-        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_LOTTERY_APP_16986 }}
-      run: |
-        echo "$GOOGLE_APPLICATION_CREDENTIALS" > service-account-key.json
-        npm install -g firebase-tools@latest
-        firebase deploy --only hosting --public build/web
+      - uses: actions/checkout@v2
+      # Add any build steps here. For example:
+      # - run: npm ci && npm run build
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_LOTTERY_APP_16986 }}"
+          projectId: lottery-app-16986
+          channelId: live
