--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -1,4 +1,7 @@
-name: CI
+name: Build, Release app to Firebase Hosting
+# name: Test, Build and Release apk
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
   push:
     branches:
@@ -6,17 +9,30 @@ on:
   pull_request:
     branches:
       - main
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build_web:
-    name: Build Flutter (Web)
+  # This workflow contains a single job called "build"
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      # Add any build steps here. For example:
-      # - run: npm ci && npm run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
         with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_LOTTERY_APP_16986 }}"
-          projectId: lottery-app-16986
-          channelId: live
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: 'dev'
+      - name: 'Build Web App'
+        run: flutter build web -t lib/startup/main_prod.dart
+#       - name: deploy
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           github_token: ${{ secrets.TOKEN }}
+#           publish_dir: ./build/web
+      - name: Deploy to Firebase Hosting
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
