--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           channel: 'dev'
       - name: 'Build Web App'
-        run: flutter build web -t lib/startup/main_prod.dart
+        run: flutter build web -t lib/main.dart
 #       - name: deploy
 #         uses: peaceiris/actions-gh-pages@v3
 #         with:
