--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -6,21 +6,15 @@ on:
   pull_request:
     branches:
       - main
-
 jobs:
   build_web:
-    name: Build and Deploy Flutter (Web)
+    name: Build Flutter (Web)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      # Build the Flutter web app
-      - name: Build Flutter Web App
-        run: flutter build web
-
-      # Deploy to Firebase Hosting
-      - name: Deploy to Firebase Hosting
-        uses: FirebaseExtended/action-hosting-deploy@v0
+      # Add any build steps here. For example:
+      - run: flutter build web
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_LOTTERY_APP_16986 }}"
