--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -19,10 +19,10 @@ jobs:
     - run: flutter pub get
     - run: flutter config --enable-web
     - run: flutter build web
-    - name: Deploy to Firebase
-      uses: w9jds/firebase-action@master
+    - name: Deploy to Firebase Hosting
+      uses: FirebaseExtended/action-hosting-deploy@v0
       with:
-        args: deploy --only hosting --public build/web
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        PROJECT_ID: default
+        repoToken: "${{ secrets.GITHUB_TOKEN }}"
+        firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_LOTTERY_APP_16986 }}"
+        projectId: lottery-app-16986
+        channelId: live
